--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: The New Normal Sentinel - You're What's Important To Us
 markdown: kramdown
-permalink: /nns/blog/:year/:month/:day/:title
+permalink: /nns/:blog/:year/:month/:day/:title
